# build-your-own-slm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: small.yaml  tiny.yaml
docker/: prometheus.yml
docs/: api.md  architecture.md  deployment.md  developer-guide.md  openapi.json  operations-runbook.md  security.md  training.md
src/slm/: __init__.py  __main__.py  cli.py  config.py  data.py  logging_config.py  tokenizer.py  utils.py
src/slm/api/: __init__.py  app.py  metrics.py  middleware.py  routes.py  schemas.py  security.py
src/slm/generation/: __init__.py  sampler.py
src/slm/inference/: __init__.py  engine.py
src/slm/model/: __init__.py  gpt.py  layers.py
src/slm/training/: __init__.py  checkpoint.py  schedule.py  trainer.py
tests/: conftest.py
tests/integration/: test_api.py  test_app_loading.py  test_cli.py  test_inference_engine.py  test_training.py
tests/load/: locustfile.py
tests/unit/: test_checkpoint.py  test_config.py  test_data.py  test_extra_coverage.py  test_model.py  test_sampler.py  test_schedule.py  test_security.py  test_tokenizer.py  test_utils.py
