[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byo-slm"
version = "0.1.0"
description = "Build your own Small Language Model: a from-scratch, production-grade GPT-style transformer with training, inference, and a serving API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "BYO-SLM Contributors" }]
keywords = ["llm", "transformer", "gpt", "language-model", "pytorch", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1,<3.0",
    "numpy>=1.24",
    "regex>=2023.10.3",
    "pyyaml>=6.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1",
    "typer>=0.9,<1.0",
    "rich>=13.7",
    "structlog>=24.1",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.0",
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
    "pre-commit>=3.6",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/your-org/build-your-own-slm"
Documentation = "https://github.com/your-org/build-your-own-slm/tree/main/docs"
Repository = "https://github.com/your-org/build-your-own-slm"
Changelog = "https://github.com/your-org/build-your-own-slm/blob/main/CHANGELOG.md"

[project.scripts]
slm = "slm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slm = ["py.typed"]

# ---------------------------------------------------------------------------
# Ruff: linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "N812",  # lowercase imported as non-lowercase (torch.nn.functional as F)
    "B008",  # function call in argument defaults (FastAPI/Typer idiom)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.ruff.lint.isort]
known-first-party = ["slm"]

# ---------------------------------------------------------------------------
# mypy: static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: end-to-end / integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["slm"]
omit = ["*/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
